spade-tests/src/snapshots/spade_tests__ast_lowering__invisible_struct_is_invisible.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    struct Secret {}
}

fn test() -> a::Secret {
    a::Secret()
}


error: Path cannot be traversed
  ┌─ testinput:5:14
  │
2 │     struct Secret {}
  │     ---------------- The inaccessible item is defined here
  ·
5 │ fn test() -> a::Secret {
  │              ^^^^^^^^^
  │              │  │
  │              │  this item is not inaccessible from the current namespace
  │              Path cannot be traversed
  │
  = note: consider using `pub` to alter its visibility
